--- a/product-webapp/webapp/src/app/Components/order-history/order-history.component.html
+++ b/product-webapp/webapp/src/app/Components/order-history/order-history.component.html
@@ -150,7 +150,7 @@
           </div>
           <mat-card-actions><button (click)="onfileChange()" type="select">Upload Image</button>
 
-            <button (click)="saveYourReview()">Submit Review</button>
+            <button (click)="saveYourReview(item.productId)">Submit Review</button>
           </mat-card-actions>
         </mat-card>
       </div>
