--- a/product-webapp/webapp/src/app/Components/login/login.component.html
+++ b/product-webapp/webapp/src/app/Components/login/login.component.html
@@ -1,78 +1,58 @@
-<mat-card
-  style="display: flex; flex-direction: row; width: 70%;  box-shadow: 5px 5px 5px #ccc;margin-bottom: 3rem; overflow: hidden;margin-bottom: 0;height: 96%;">
+<mat-card style="display: flex; flex-direction: row; width: 65%; margin: 0 auto; box-shadow: 5px 5px 5px #ccc; max-height: 100vh; overflow-y: auto; margin-top:5rem">
 
-  <mat-card-content style="overflow: hidden; width: 60%;">
-    <img src="../../../assets/login.jpg" width="100%">
+  <mat-card-content style="overflow: hidden; width: 100%;">
+    <img src="../../../assets/login.jpg" width="100%" style="height: auto; object-fit: cover;">
   </mat-card-content>
-  <div style="width: 50%; padding: 1rem;">
+
+  <div style="width: 100%; padding: 1rem;">
+
     <mat-card-title>
-      <!-- <img src="../../../assets/Login-PNG-Free-Image.png" style="width: 100px;"> -->
-      <h1>Log In</h1>
+      <h1 style="font-size: 1.5rem; margin-bottom: 1rem; text-align:center;">Log In</h1>
     </mat-card-title>
+
     <mat-card-content>
       <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" style="width: 100%;">
+
         <p>
           <mat-form-field style="width: 100%;">
-
-            <input id="ename" type="text" style="padding-top: 0.3rem;padding-bottom: 0.3rem;" formControlName="ename"
-              placeholder="User Name*" matInput required>
-            <span class="text-danger"
-              *ngIf="registerFormControl.ename.touched && registerFormControl.ename.errors?.['required']">
+            <input id="ename" type="text" formControlName="ename" placeholder="User Name*" matInput required>
+            <span class="text-danger" *ngIf="registerFormControl.ename.touched && registerFormControl.ename.errors?.['required']">
               Name is required
             </span>
-            <!-- <div *ngIf="profileForm.invalid" class="alert alert-danger">
-            <div *ngIf="profileForm.errors?.['required']">
-              Name is required.
-            </div>
-          </div> -->
           </mat-form-field>
         </p>
+
         <p>
           <mat-form-field style="width: 100%;">
-            <input id="email" type="email" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
-              formControlName="email" placeholder="Email*" matInput required="email is required">
-            <span class="text-danger"
-              *ngIf="registerFormControl.email.touched && registerFormControl.email.errors?.['required']">
+            <input id="email" type="email" formControlName="email" placeholder="Email*" matInput required="email is required">
+            <span class="text-danger" *ngIf="registerFormControl.email.touched && registerFormControl.email.errors?.['required']">
               Email is required
             </span>
-
           </mat-form-field>
         </p>
+
         <p>
           <mat-form-field style="width: 100%;">
-            <input id="password" type="password" formControlName="password"
-              style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;" placeholder="Password*" matInput required>
-            <span class="text-danger"
-              *ngIf="registerFormControl.password.touched && registerFormControl.password.errors?.['required']">
-              Password is required(min length 8)
+            <input id="password" type="password" formControlName="password" placeholder="Password*" matInput required>
+            <span class="text-danger" *ngIf="registerFormControl.password.touched && registerFormControl.password.errors?.['required']">
+              Password is required (min length 8)
             </span>
-
           </mat-form-field>
         </p>
-        <div class="button">
-          <button type="submit" class="btn1">LOG IN</button>
+
+        <div class="button" style="text-align: center;">
+          <button type="submit" class="btn1" style="background-color: #4682A9; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">LOG IN</button>
         </div>
 
-
-        <div style="display: inline-grid;
-    grid-template-columns: auto auto ;
- margin-top: 2rem;">
-          <div style=" padding: 10px;">
-
-            <a routerLink="/signUpUser">First Time Here?</a>
-          </div>
-
-          <div style="padding: 10px;">
-            <a routerLink="/signUpSeller">Want To Sell Items Here?</a>
-          </div>
-
+        <div style="text-align: center; margin-top: 2rem;">
+          <a routerLink="/signUpUser" style="text-decoration: none; color: #4cc8ff; font-weight: bold;">First Time Here?</a>
+          <span style="margin: 0 1rem;">|</span>
+          <a routerLink="/signUpSeller" style="text-decoration: none; color: #4cc8ff; font-weight: bold;">Want To Sell Items Here?</a>
         </div>
+
       </form>
-
     </mat-card-content>
 
   </div>
-
-
 
 </mat-card>
