--- a/product-webapp/webapp/src/app/Components/sign-up-seller/sign-up-seller.component.css
+++ b/product-webapp/webapp/src/app/Components/sign-up-seller/sign-up-seller.component.css
@@ -1,55 +1,11 @@
-:host {
-  display: flex;
-  justify-content: center;
-  margin: 100px 0px;
-}
-
-.mat-form-field {
-  width: 100%;
-  min-width: 300px;
-}
-
-mat-card-title,
-mat-card-content {
-  display: flex;
-  justify-content: center;
-}
-
-.error {
-  padding: 16px;
-  width: 300px;
-  color: white;
-  background-color: red;
-}
-
-.button {
-  display: flex;
-  justify-content: center;
-
-}
-.btn1{
-padding-left: 6%;
-border-radius: 999px;
-padding-right: 6%;
-padding-top: 2%;
-padding-bottom: 2%; background-color: white;border-color: #4cc8ff;
-}
-.btn1:hover{
-background-color: whitesmoke;
-box-shadow: 5px 5px 5px #ccc;
-}
-a.router-link {
-  font-family: 'Your Preferred Font', sans-serif; /* Replace with the font you want to use */
-  font-size: 16px; /* Adjust the font size */
-  color: #4682A9; /* Set the color */
-  text-decoration: none; /* Remove underlines by default */
-  transition: color 0.2s; /* Add a smooth color transition on hover */
-  text-align: center; /* Center-align the text */
-  display: block; /* Makes the link fill the entire width of its container */
-  margin: 0 auto; /* Centers the link horizontally */
-}
-
-a.router-link:hover {
-  color: #1e5e8c; /* Change the color on hover */
-  text-decoration: underline; /* Add underline on hover */
+@media (max-width: 600px) {
+  /* Styles for screens with a max width of 600px (typical mobile screens) */
+  mat-card {
+    width: 100%;
+  }
+  img {
+    height: auto;
+    max-width: 100%;
+  }
+  /* Add additional mobile-specific styles here */
 }
