--- a/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.css
+++ b/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.css
@@ -31,6 +31,7 @@ h2::after {
 }
 .carousel .thumb-wrapper {
 	padding: 25px 15px;
+	margin-bottom: 2rem;
 	background: #fff;
 	border-radius: 6px;
 	text-align: center;
