--- a/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
+++ b/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
@@ -9,10 +9,10 @@
                             <div class="row">
                                 <div class="col-sm-3" *ngFor="let item of similarProducts">
                                     <div class="thumb-wrapper">
-                                        <span class="wish-icon" *ngIf="!isInWishList(item)" (click)="addToWishlist(item)">
+                                        <span class="wish-icon" *ngIf="!isInWishList(item) && isLoggedIn" (click)="addToWishlist(item)">
                                             <i class="fa fa-heart-o"></i>
                                         </span>
-                                          <span *ngIf="isInWishList(item)">Added in Wishlist</span>
+                                          <span *ngIf="isInWishList(item) && isLoggedIn">Added in Wishlist</span>
                                           
                                         <div class="img-box">
                                             <img [src]="'data:image/jpeg;base64,' + item.product_image" class="img-fluid" alt="">
